2007-11-28  Peter Kasting  <zerodpx@gmail.com>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=16169
        GIF decoder needs to set hasAlpha() correctly on subsequent frames.

        This also removes the workaround for this problem in
        ImageSourceCairo.cpp.

        * platform/graphics/cairo/ImageSourceCairo.cpp:
        (WebCore::ImageSource::frameHasAlphaAtIndex):
        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::initFrameBuffer):


Canonical link: https://commits.webkit.org/22033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28114 268f45cc-cd09-0410-ab3c-d52691b4dbfc